--- a/css/iCloud/iCloud.scss
+++ b/css/iCloud/iCloud.scss
@@ -548,10 +548,10 @@ $Map: ( "purple":#C970E3 0px -231px, "green":#6EDC32 0px -256px, "blue":#40ABF8 
             width: 23px;
             height: 23px;
             background-image: url("../images/packed-5.png");
-            background-position: -96px -497px;
+            background-position: -23px -526px;
             background-repeat: no-repeat;
             &.active {
-                background-position: -23px -526px;
+                background-position: -96px -497px;
             }
         }
         .container {
@@ -574,6 +574,7 @@ $Map: ( "purple":#C970E3 0px -231px, "green":#6EDC32 0px -256px, "blue":#40ABF8 
             font-size: 19px;
             color: #999;
             cursor: pointer;
+            display: none;
         }
     }
     /*完成事项列表*/
@@ -581,6 +582,7 @@ $Map: ( "purple":#C970E3 0px -231px, "green":#6EDC32 0px -256px, "blue":#40ABF8 
         @include whb(100%,auto,transparent);
         margin-top: 52px;
         overflow: auto;
+        display: none;
         &:after {
             @include clearfix;
         }
@@ -629,12 +631,6 @@ $Map: ( "purple":#C970E3 0px -231px, "green":#6EDC32 0px -256px, "blue":#40ABF8 
                 font-size: 20px;
                 border: none;
                 background: none;
-            }
-            &:hover {
-                background: #E4F0E0;
-                border-top: 1px solid #49BF1F;
-                border-bottom: 1px solid #49BF1F;
-                z-index: 333;
             }
             &:hover .com-list-title .row-bottom {
                 display: none;
@@ -687,10 +683,9 @@ $Map: ( "purple":#C970E3 0px -231px, "green":#6EDC32 0px -256px, "blue":#40ABF8 
     }
     /*建立新项目左侧图标*/
     #new {
-        @include whb(100%,52px,transparent);
+        width: 100%;
+        height: 52px;
         margin-top: 52px;
-        border-top: 1px solid #6EDC32;
-        border-bottom: 1px solid #6EDC32;
         position: relative;
         &:after {
             @include clearfix;
@@ -734,6 +729,90 @@ $Map: ( "purple":#C970E3 0px -231px, "green":#6EDC32 0px -256px, "blue":#40ABF8 
     }
 }
 /*right-main-view End*/
+/*clear清除选项*/
+#clear {
+    @include whb(450px,170px,#fff);
+    transition:transform 0.06s ease-in-out 0s;
+    transform:scale(0,0);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    @include center;
+    border-radius: 15px;
+    z-index: 999;
+    box-shadow:0px 0px 0px 1000px rgba(0,0,0,.39);
+    &.active{
+        transform:scale(1,1);
+    }
+    .clear-img {
+        position: absolute;
+        left: 25px;
+        top: 19px;
+        height: 65px;
+        width: 68px;
+        @include bg-img(url("../images/packed-5.png"),no-repeat,-68px -167px);
+    }
+    .clear-inner {
+        @include whb(350px,78px,transparent);
+        margin-left: 95px;
+        margin-top: 7px;
+        .sc {
+            word-wrap: break-word;
+            font-size: 19px;
+            line-height: 1.2em;
+            overflow: visible;
+            font-size: 21px;
+            font-weight: normal;
+            color: #313131;
+            padding-left: 15px;
+            margin-bottom: 5px;
+        }
+        .ms {
+            margin-top: 11px;
+            font-size: 17px;
+            line-height: 21px;
+            color: #474747;
+            overflow: visible;
+            word-wrap: break-word;
+            padding-left: 15px;
+        }
+    }
+    .bttn {
+        @include whb(100%,44px,transparent);
+        margin-top: 20px;
+        &:after {
+            @include clearfix;
+        }
+        li {
+            float: left;
+            width: 139px;
+            text-align: right;
+            height: 24px;
+            line-height: 1.5;
+            padding-right: 26px;
+            margin-top: 10px;
+            a {
+                font-size: 16px;
+                font-weight: 300;
+            }
+        }
+        .qx {
+            margin-left: 146px;
+            border-right: 1px solid #999;
+            a {
+                color: #308CFB;
+            }
+        }
+        .qc {
+            border-right: none;
+            margin-left: 26px;
+            a {
+                color: #167EFB;
+                font-weight:600;
+            }
+        }
+    }
+}
+/*clear清除选项  End*/
 /*list map 循环*/
 /*建立新项目左侧图标*/
 $color-list: purple,green,blue,yellow,blrown,red,orange;
@@ -750,16 +829,25 @@ $map3: ( "purple":#C970E3 -128px -401px, "green":#6EDC32 -136px -199px, "blue":#
         margin: 0;
     }
 }
+/*建立新项目左侧图标 End*/
 /*边框及背景颜色*/
 $map5: ( "purple":#C970E3 #F6ECF9, "green":#6EDC32 #E5F1E1, "blue":#40ABF8 #E0EFF7, "yellow":#F3CB00 #F5F0DF, "blrown":#A0855E #EEEBE7, "red":#F62368 #FAE5EB, "orange":#F99600 #F1E4D8);
 @each $v in map_keys($map5) {
+    $l: map_get($map5,$v);
     .com-list-inner.active.#{$v} {
-        background: nth($l,1);
-        border-top: 1px solid nth($l,2);
-        border-bottom: 1px solid nth($l,2);
+        background: nth($l,2);
+        border-top: 1px solid nth($l,1);
+        border-bottom: 1px solid nth($l,1);
+        z-index: 333;
+    }
+    .newx.active.#{$v} {
+        background: nth($l,2);
+        border-top: 1px solid nth($l,1);
+        border-bottom: 1px solid nth($l,1);
         z-index: 333;
     }
 }
+/*边框及背景颜色 End*/
 $color-list: purple,green,blue,yellow,blrown,red,orange;
 $map2: ( "purple":#C970E3 -64px -401px, "green":#6EDC32 -74px -359px, "blue":#40ABF8 0px -433px, "yellow":#F3CB00 -32px -465px, "blrown":#A0855E -32px -433px, "red":#F62368 -96px -433px, "orange":#F99600 -136px -235px );
 @each $v in map_keys($map2) {
